# bitfinex-margin-allocator

./: .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  README.md  START_HERE.md  SUMMARY.md  VERIFICATION_CHECKLIST.md  bitfinex-margin-balancer-design_draft.md  conversations.md  prd.json  progress.txt  pyproject.toml  requirements.txt  spec-all.md
.claude/: settings.local.json
config/: config.example.yaml
scripts/: API_VERIFICATION_GUIDE.md  verify_api.py
scripts/ralph/: progress.txt  prompt.md  ralph.sh
src/: __init__.py  config_manager.py  main.py
src/api/: __init__.py  bitfinex_client.py  bitfinex_ws.py
src/core/: margin_allocator.py  position_liquidator.py  risk_calculator.py
src/notifier/: telegram_bot.py
src/scheduler/: __init__.py  event_detector.py  poll_scheduler.py
src/storage/: __init__.py  database.py  models.py
tasks/: prd-bitfinex-margin-balancer.md
tests/: __init__.py  test_bitfinex_client.py  test_bitfinex_ws.py  test_config_manager.py  test_database.py  test_event_detector.py  test_integration.py  test_margin_allocator.py  test_models.py  test_poll_scheduler.py  test_position_liquidator.py  test_risk_calculator.py  test_telegram_bot.py
